--- a/.travis.yml
+++ b/.travis.yml
@@ -1,61 +1,32 @@
-language: cpp
-dist: precise
-compiler:
-  - gcc
-sudo: false
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-      - boost-latest
-    packages:
-      - gcc-4.8
-      - g++-4.8
-      - libboost-filesystem1.55-dev
-      - libboost-program-options1.55-dev
-      - libboost-regex1.55-dev
-      - libboost-date-time1.55-dev
-      - libboost-thread1.55-dev
-      - libboost-log1.55-dev
-      - libboost-locale1.55-dev
-      - libboost-chrono1.55-dev
+sudo: required
+services:
+  - docker
 
 before_install:
-  # Use a predefined install location; cppcheck requires the cfg location is defined at compile-time.
-  - mkdir -p $USERDIR
-  # grab a pre-built cmake 3.2.3
-  - wget https://s3.amazonaws.com/kylo-pl-bucket/cmake-3.2.3-Linux-x86_64.tar.gz
-  - tar xzvf cmake-3.2.3-Linux-x86_64.tar.gz --strip 1 -C $USERDIR
-  # grab a pre-built cppcheck from s3
-  - wget https://s3.amazonaws.com/kylo-pl-bucket/pcre-8.36_install.tar.bz2
-  - tar xjvf pcre-8.36_install.tar.bz2 --strip 1 -C $USERDIR
-  - wget https://s3.amazonaws.com/kylo-pl-bucket/cppcheck-1.69_install.tar.bz2
-  - tar xjvf cppcheck-1.69_install.tar.bz2 --strip 1 -C $USERDIR
-  # grab a pre-built doxygen 1.8.7 from s3
-  - wget https://s3.amazonaws.com/kylo-pl-bucket/doxygen_install.tar.bz2
-  - tar xjvf doxygen_install.tar.bz2 --strip 1 -C $USERDIR
-  # Install dependencies of cfacter
-  - wget https://s3.amazonaws.com/kylo-pl-bucket/yaml-cpp-0.5.1_install.tar.bz2
-  - tar xjvf yaml-cpp-0.5.1_install.tar.bz2 --strip 1 -C $USERDIR
-  # Install coveralls.io update utility
-  - pip install --user cpp-coveralls
+  - docker pull mikaelsmith/cpp-ci:1
 
-script: ./scripts/travis_target.sh
+script:
+  - >
+    docker run -v `pwd`:/leatherman mikaelsmith/cpp-ci:1 /bin/bash -c "
+    cd /leatherman &&
+    rm locales/leatherman.pot &&
+    cmake $EXTRA_VARS . &&
+    mkdir dest &&
+    make $TARGET DESTDIR=/leatherman/dest -j2 &&
+    { [ '$COVERALLS' == 'ON' ] && coveralls --gcov-options '\-lp' -r . -b . -e src -e vendor >/dev/null || true; }
+    "
+  - if [ "$DO_RELEASE" == "true" ]; then tar czvf leatherman.tar.gz `find dest -type f -print`; fi
 
 env:
-  global:
-    - USERDIR=/tmp/userdir
-    - PYTHONUSERBASE=$USERDIR
-    - PATH=$USERDIR/bin:$PATH
-    - LD_LIBRARY_PATH=$USERDIR/lib:$LD_LIBRARY_PATH
   matrix:
-    - TRAVIS_TARGET=CPPLINT
-    - TRAVIS_TARGET=CPPCHECK
-    - TRAVIS_TARGET=RELEASE
-    - TRAVIS_TARGET=DEBUG
-    - TRAVIS_TARGET=SHARED_RELEASE
-    - TRAVIS_TARGET=LOCALE_DISABLED
-    - TRAVIS_TARGET=GETTEXT_DISABLED
+    - TARGET=cpplint
+    - TARGET=cppcheck
+    - TARGET="all test install ARGS=-v" DO_RELEASE=true EXTRA_VARS="-DBOOST_STATIC=ON"
+    - TARGET="all test install ARGS=-v" EXTRA_VARS="-DCMAKE_BUILD_TYPE=Debug -DCOVERALLS=ON" COVERALLS=ON
+    - TARGET="all test install ARGS=-v" EXTRA_VARS="-DLEATHERMAN_SHARED=ON"
+    - TARGET="all test install ARGS=-v" EXTRA_VARS="-DLEATHERMAN_USE_LOCALES=OFF"
+    - TARGET="all test install ARGS=-v" EXTRA_VARS="-DLEATHERMAN_GETTEXT=OFF"
+
 deploy:
   provider: releases
   api_key:
@@ -65,4 +36,4 @@ deploy:
   on:
     repo: puppetlabs/leatherman
     tags: true
-    condition: '"$TRAVIS_TARGET" == "RELEASE"'
+    condition: '"$DO_RELEASE" == "true"'
