--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,29 +1,36 @@
 clone_depth: 10
-install:
-  - choco install -y mingw-w64 -Version 5.2.0 -source https://www.myget.org/F/puppetlabs
-  - choco install -y cmake -Version 3.2.2 -source https://www.myget.org/F/puppetlabs
-  - choco install -y gettext -Version 0.19.6 -source https://www.myget.org/F/puppetlabs
-  - choco install -y pl-toolchain-x64 -Version 2015.12.01.1 -source https://www.myget.org/F/puppetlabs
-  - choco install -y pl-boost-x64 -Version 1.58.0.2 -source https://www.myget.org/F/puppetlabs
-  - choco install -y pl-openssl-x64 -Version 1.0.24.1 -source https://www.myget.org/F/puppetlabs
-  - choco install -y pl-curl-x64 -Version 7.46.0.1 -source https://www.myget.org/F/puppetlabs
-
-  - SET PATH=C:\Ruby21-x64\bin;C:\tools\mingw64\bin;C:\Program Files\gettext-iconv;%PATH%
-  - ps: $env:PATH = $env:PATH.Replace("Git\bin", "Git\cmd")
-  - ps: $env:PATH = $env:PATH.Replace("Git\usr\bin", "Git\cmd")
-
-build_script:
-  - ps: cmake -G "MinGW Makefiles" -DCMAKE_TOOLCHAIN_FILE="C:\tools\pl-build-tools\pl-build-toolchain.cmake" -DCMAKE_INSTALL_PREFIX=C:\tools\leatherman -DBOOST_STATIC=ON -DLEATHERMAN_SHARED="$env:shared" .
-  - ps: mingw32-make install
-  - ps: 7z.exe a -t7z leatherman.7z C:\tools\leatherman\
-
-test_script:
-  - ps: ctest -V 2>&1 | %{ if ($_ -is [System.Management.Automation.ErrorRecord]) { $_ | c++filt } else { $_ } }
-
 environment:
   matrix:
   - shared: OFF
   - shared: ON
+
+init:
+  - |
+      choco install -y mingw-w64 -Version 5.2.0 -source https://www.myget.org/F/puppetlabs
+      choco install -y cmake -Version 3.2.2 -source https://www.myget.org/F/puppetlabs
+      choco install -y gettext -Version 0.19.6 -source https://www.myget.org/F/puppetlabs
+      choco install -y pl-toolchain-x64 -Version 2015.12.01.1 -source https://www.myget.org/F/puppetlabs
+      choco install -y pl-boost-x64 -Version 1.58.0.2 -source https://www.myget.org/F/puppetlabs
+      choco install -y pl-openssl-x64 -Version 1.0.24.1 -source https://www.myget.org/F/puppetlabs
+      choco install -y pl-curl-x64 -Version 7.46.0.1 -source https://www.myget.org/F/puppetlabs
+
+  - ps: |
+      $env:PATH = $env:PATH.Replace("Git\bin", "Git\cmd")
+      $env:PATH = $env:PATH.Replace("Git\usr\bin", "Git\cmd")
+
+install:
+  - SET PATH=C:\Ruby21-x64\bin;C:\tools\mingw64\bin;C:\Program Files\gettext-iconv;%PATH%
+
+build_script:
+  - ps: |
+      cmake -G "MinGW Makefiles" -DCMAKE_TOOLCHAIN_FILE="C:\tools\pl-build-tools\pl-build-toolchain.cmake" -DCMAKE_INSTALL_PREFIX=C:\tools\leatherman -DBOOST_STATIC=ON -DLEATHERMAN_SHARED="$env:shared" .
+      mingw32-make -j2
+
+test_script:
+  - ps: |
+      ctest -V 2>&1 | %{ if ($_ -is [System.Management.Automation.ErrorRecord]) { $_ | c++filt } else { $_ } }
+      mingw32-make install
+      7z.exe a -t7z leatherman.7z C:\tools\leatherman\
 
 artifacts:
   - path: leatherman.7z
