--- a/curl/CMakeLists.txt
+++ b/curl/CMakeLists.txt
@@ -26,6 +26,7 @@ add_leatherman_includes("${CURL_INCLUDE_DIRS}")
 leatherman_dependency(locale)
 leatherman_dependency(logging)
 leatherman_dependency(util)
+leatherman_dependency(file_util)
 add_leatherman_deps(${CURL_LIBRARIES} ${CURL_DEPS})
 
 if (BUILDING_LEATHERMAN)
