--- a/json_container/CMakeLists.txt
+++ b/json_container/CMakeLists.txt
@@ -1,9 +1,9 @@
 find_package(Boost 1.54 REQUIRED COMPONENTS regex)
+find_package(rapidjson 1.1.0 REQUIRED)
 
 add_leatherman_deps("${Boost_LIBRARIES}")
-add_leatherman_includes("${Boost_INCLUDE_DIRS}")
+add_leatherman_includes("${Boost_INCLUDE_DIRS} ${RAPIDJSON_INCLUDE_DIRS}")
 
-leatherman_dependency(rapidjson)
 leatherman_dependency(locale)
 
 add_leatherman_library("src/json_container.cc")
