--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,14 @@ init:
       choco install -y pl-boost-x64 -Version 1.58.0.2 -source https://www.myget.org/F/puppetlabs
       choco install -y pl-openssl-x64 -Version 1.0.24.1 -source https://www.myget.org/F/puppetlabs
       choco install -y pl-curl-x64 -Version 7.46.0.1 -source https://www.myget.org/F/puppetlabs
+      cd C:\projects
+      curl --location -o v1.1.0.zip https://github.com/Tencent/rapidjson/archive/v1.1.0.zip
+      7z.exe x v1.1.0.zip
+      cd rapidjson-1.1.0
+      cmake .
+      msbuild /P:Configuration=Release RapidJSON.sln
+      msbuild /P:Configuration=Release INSTALL.vcxproj
+      cd C:\projects\leatherman
 
   - ps: |
       $env:PATH = $env:PATH.Replace("Git\bin", "Git\cmd")
