(maint) Update Catch to 1.10.0
Updates https://github.com/philsquared/Catch to the 1.10.0 release.

--- a/catch/CMakeLists.txt
+++ b/catch/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_leatherman_vendored("catch-1.4.0.zip" "catch" "include")
+add_leatherman_vendored("Catch-1.10.0.zip" "Catch-1.10.0" "single_include")
