--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ services:
   - docker
 
 before_install:
-  - docker pull mikaelsmith/cpp-ci:1
+  - docker pull gcr.io/cpp-projects/cpp-ci:1
 
 script:
   - >
-    docker run -v `pwd`:/leatherman mikaelsmith/cpp-ci:1 /bin/bash -c "
+    docker run -v `pwd`:/leatherman gcr.io/cpp-projects/cpp-ci:1 /bin/bash -c "
     cd /leatherman &&
     rm locales/leatherman.pot &&
     cmake $EXTRA_VARS . &&
