(FACT-1772) Use CMAKE_INSTALL_LIBDIR instead of LIB_SUFFIX
CMAKE_INSTALL_LIBDIR, which is a part of the GNUInstallDirs module,
contains the correct location of the lib directory on the specific
platform that we are building the project so that we (by default)
install to the right lib directories when building our standalone
C++ components.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,7 +124,7 @@ if (LEATHERMAN_INSTALL)
         cmake/normalize_pot.cmake
         cmake/generate_translations.cmake
     )
-    set(INSTALL_LOC "lib${LIB_SUFFIX}/cmake/leatherman")
+    set(INSTALL_LOC "${CMAKE_INSTALL_LIBDIR}/cmake/leatherman")
     install(FILES
         ${CMAKE_FILES}
         "${PROJECT_BINARY_DIR}/cmake/leatherman.cmake"
