--- a/execution/CMakeLists.txt
+++ b/execution/CMakeLists.txt
@@ -66,5 +66,5 @@ endif()
 
 check_library_exists(c closefrom /lib CLOSEFROM_IN_LIBC)
 if ("${CLOSEFROM_IN_LIBC}" STREQUAL "1")
-    add_compile_definitions(HAS_CLOSEFROM)
+    add_definitions(-DHAS_CLOSEFROM)
 endif()
