(LTH-162) Use /proc to close file descriptors
On systems where /proc is available, use /proc/self/fd to close only
open file descriptors.

Without this change, facter runs would take a long time on systems with
a high open file descriptor limit.

`$ ./bin/facter --no-cache`
Before: file descriptors: 1024000 - 9s
After:  file descriptors: 1024000 - 0,2s

--- a/execution/CMakeLists.txt
+++ b/execution/CMakeLists.txt
@@ -66,5 +66,10 @@ endif()
 
 check_library_exists(c closefrom /lib CLOSEFROM_IN_LIBC)
 if ("${CLOSEFROM_IN_LIBC}" STREQUAL "1")
-    add_compile_definitions(HAS_CLOSEFROM)
+    add_definitions(-DHAS_CLOSEFROM)
+endif()
+
+if (IS_DIRECTORY "/proc/self/fd")
+    add_definitions(-DHAS_PROC_PID)
+    message("-- Found /proc")
 endif()
