--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,15 +22,13 @@ install:
   - SET PATH=C:\Ruby21-x64\bin;C:\tools\mingw64\bin;C:\Program Files\gettext-iconv;%PATH%
 
 build_script:
-  - ps: |
-      cmake -G "MinGW Makefiles" -DCMAKE_TOOLCHAIN_FILE="C:\tools\pl-build-tools\pl-build-toolchain.cmake" -DCMAKE_INSTALL_PREFIX=C:\tools\leatherman -DBOOST_STATIC=ON -DLEATHERMAN_SHARED="$env:shared" .
-      mingw32-make -j2
+  - ps: cmake -G "MinGW Makefiles" -DCMAKE_TOOLCHAIN_FILE="C:\tools\pl-build-tools\pl-build-toolchain.cmake" -DCMAKE_INSTALL_PREFIX=C:\tools\leatherman -DBOOST_STATIC=ON -DLEATHERMAN_SHARED="$env:shared" .
+  - ps: mingw32-make -j2
 
 test_script:
-  - ps: |
-      ctest -V 2>&1 | %{ if ($_ -is [System.Management.Automation.ErrorRecord]) { $_ | c++filt } else { $_ } }
-      mingw32-make install
-      7z.exe a -t7z leatherman.7z C:\tools\leatherman\
+  - ps: ctest -V 2>&1 | %{ if ($_ -is [System.Management.Automation.ErrorRecord]) { $_ | c++filt } else { $_ } }
+  - ps: mingw32-make install
+  - ps: 7z.exe a -t7z leatherman.7z C:\tools\leatherman\
 
 artifacts:
   - path: leatherman.7z
