--- a/.github/workflows/ci_checks.yaml
+++ b/.github/workflows/ci_checks.yaml
@@ -12,23 +12,25 @@ permissions:
 jobs:
   ci_checks:
     strategy:
+      fail-fast: false
       matrix:
         options:
           - make_command: cpplint
+            cmake_extra_vars: -DPYTHON_EXECUTABLE:FILEPATH=/usr/bin/python2
           - make_command: cppcheck
           - make_command: all test install ARGS=-v
-            cmake_extra_vars: -DCMAKE_BUILD_TYPE=Debug -DCOVERALLS=ON
+            cmake_extra_vars: -DCMAKE_BUILD_TYPE=Debug -DCOVERALLS=ON -DENABLE_CXX_WERROR=OFF
             coveralls: ON
           - make_command: all test install ARGS=-v
-            cmake_extra_vars: -DLEATHERMAN_USE_LOCALES=OFF
+            cmake_extra_vars: -DLEATHERMAN_USE_LOCALES=OFF -DENABLE_CXX_WERROR=OFF
           - make_command: all test install ARGS=-v
-            cmake_extra_vars: -DLEATHERMAN_GETTEXT=OFF
+            cmake_extra_vars: -DLEATHERMAN_GETTEXT=OFF -DENABLE_CXX_WERROR=OFF
     runs-on: ubuntu-latest
     steps:
       - name: checkout current pr
         uses: actions/checkout@v4
-      - name: docker pull and make
-        uses: ./.github/actions/docker_pull_and_make
+      - name: run CMake and Make
+        uses: ./.github/actions/run_cmake_and_make
         with:
           cmake_extra_vars: ${{ matrix.options.cmake_extra_vars }}
           make_command: ${{ matrix.options.make_command }}
