(maint) allow use of <LIB>_ROOT cmake settings via cmake_policy
In order to set BOOST_ROOT or CURL_ROOT and have cmake correctly use
those locations instead of the defaults, enable the CMP0074 policy in
leatherman cmake builds.

See `cmake --help-policy CMP0074` for a description of the policy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.2.2)
 project(leatherman VERSION 1.12.12)
 
+# Set the cmake policy that allows -D<LIB>_ROOT settings, so that you can point to a specific boost or curl
+cmake_policy(SET CMP0074 NEW)
+
 option(DYNAMICBASE "Add dynamicbase linker option" ON)
 if (WIN32)
     if (DYNAMICBASE)
